<resources>
    <string name="app_name">PenguinProtocol</string>
    <string name="select_a_program">Select A Program:</string>
    <string name="country_name">COUNTRY_NAME</string>
    <string name="program_name">Program Name</string>
    <string name="selected_program">SELECTED_PROGRAM</string>
    <string name="select_a_location">Select a location:</string>
    <string name="add_location">Add Location</string>
    <string name="add_program">Add Program</string>
    <string name="selected_location">SELECTED_LOCATION</string>
    <string name="select_a_review">Select A Review:</string>
    <string name="add_review">Add Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="enter_review">Enter Review Here</string>
    <string name="review_name">DATE_AND_LOCATION</string>
    <string name="review_text_body">REVIEW_TEXT_BODY</string>
    <string name="reviewRating">REVIEW_RATING</string>
    <string name="Date">Date</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_location">Enter Location</string>

</resources>